# terminallife

./: .gitignore  LICENSE  README.md
c_tl/: termlife  termlife.c  util.h
haskellTL/: README.md  haskellTL.cabal  hie.yaml  stack.yaml
haskellTL/src/: Main.hs
python_tl/: main.py
