name:                haskellTL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskellTL#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskellTL
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.12.1.2
                     , terminal-size >= 0.3.2.1
                     , split >= 0.2.3.4
                     , splitmix >= 0.1.0.3
                     , random >= 1.2.0
